--- a/app/globals.css
+++ b/app/globals.css
@@ -52,3 +52,16 @@
         }
     }
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: white;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #9ACC50;
+    border-radius: 100px;
+}
